--- a/index.html
+++ b/index.html
@@ -1,146 +1,116 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Colton Blake</title>
-    <link rel="icon" href="/images/favicon.png" />
-
-    <meta charset="UTF-8" />
-    <meta name="description" content="Colton Blake's Resume" />
-    <meta
-      name="keywords"
-      content="Resume,Software,Engineer,Java,C,Python,HTML,CSS,JavaScript"
-    />
-    <meta name="author" content="Colton Blake" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
-  <body>
-    <div id="paper-container">
-      <div id="paper">
-        <div id="paper-header">
-          <h1 id="name">Colton Blake</h1>
-          <div id="contact-info">
-            <span>cltnblk-at-gmail-dot-com</span>
-            |
-            <span>
-              <a href="https://github.com/coltonb">github.com/coltonb</a>
-            </span>
-          </div>
-        </div>
-        <hr />
-        <h3>EDUCATION</h3>
-        <div class="section">
-          <div class="section-header">
-            <div class="section-block">
-              <b>The University of Pittsburgh</b>
-              <i><b>GPA: 3.96 / 4.00</b></i>
-            </div>
-            <div class="section-block right-align">
-              <b>Pittsburgh, PA</b>
-              <i class="date">Expected April 2019</i>
-            </div>
-          </div>
-          <ul class="details">
-            <li>Bachelor of Science in computer science</li>
-            <li>Dean's List all semesters</li>
-            <li>Awards: Isaac Seder Scholarship for academic achievement</li>
-            <li>
-              Related Coursework: Software Engineering, Software Quality
-              Assurance
-            </li>
-          </ul>
-        </div>
-        <h3>EXPERIENCE</h3>
-        <div class="section">
-          <div class="section-header">
-            <div class="section-block">
-              <b>University of Pittsburgh Medical Center Enterprises</b>
-              <i>Associate Software Engineer</i>
-            </div>
-            <div class="section-block right-align">
-              <b>Pittsburgh, PA</b>
-              <i class="date">May 2018 - Present</i>
-            </div>
-          </div>
-          <ul class="details">
-            <li>Led a small team practicing the Agile/Scrum framework.</li>
-            <li>
-              Optimized an existing system utilizing Ruby on Rails to
-              efficiently generate data quality reports for 150+ million
-              documents.
-            </li>
-            <li>
-              Reduced a $1000, week-long process to dynamic, cost-effective
-              system.
-            </li>
-            <li>
-              Expanded REST API to provide administration features to web
-              application.
-            </li>
-            <li>
-              Wrote automated unit and end-to-end tests using Cucumber in
-              collaboration with QA team to ensure all code was stable and ready
-              for production.
-            </li>
-          </ul>
-          <div class="section-header">
-            <div class="section-block">
-              <b>The University of Pittsburgh</b>
-              <i>Computer Science Undergraduate Teaching Assistant</i>
-            </div>
-            <div class="section-block right-align">
-              <b>Pittsburgh, PA</b>
-              <i class="date">August 2017 - April 2018</i>
-            </div>
-          </div>
-          <ul class="details">
-            <li>Led weekly recitations for introductory Python course.</li>
-            <li>
-              Communicated fundamental coding concepts to those with no
-              background.
-            </li>
-            <li>
-              Provided tutoring for all core computer science courses.
-            </li>
-          </ul>
-          <div class="section-header">
-            <div class="section-block">
-              <b>University of Pittsburgh Computer Science Club</b>
-              <i> Open Data Project Front-end Developer</i>
-            </div>
-            <div class="section-block right-align">
-              <b>Pittsburgh, PA</b>
-              <i class="date">Spring 2017</i>
-            </div>
-          </div>
-          <ul class="details">
-            <li>
-              Collaborated with other members to build an open source, user
-              interface for an online map displaying events around campus.
-            </li>
-            <li>
-              Leveraged open databases utilizing asynchronous JavaScript code.
-            </li>
-          </ul>
-        </div>
-        <h3>TECHNICAL SKILLS</h3>
-        <div class="section">
-          <b>Programming Languages:</b> C, Python, SQL, Java, Ruby, JavaScript,
-          HTML, CSS
-          <br />
-          <b>Technologies:</b> Git, My/PostreSQL, Ruby on Rails, Node.js, AWS,
-          Linux
-        </div>
+---
+layout: default
+---
+<div id="paper-container">
+  <div id="paper">
+    <div id="paper-header">
+      <h1 id="name">Colton Blake</h1>
+      <div id="contact-info">
+        <span>cltnblk-at-gmail-dot-com</span>
+        |
+        <span>
+          <a href="https://github.com/coltonb">github.com/coltonb</a>
+        </span>
       </div>
     </div>
-  </body>
-</html>
+    <hr />
+    <h3>EDUCATION</h3>
+    <div class="section">
+      <div class="section-header">
+        <div class="section-block">
+          <strong>The University of Pittsburgh</strong>
+          <emphasis><strong>GPA: 3.96 / 4.00</strong></emphasis>
+        </div>
+        <div class="section-block right-align">
+          <strong>Pittsburgh, PA</strong>
+          <emphasis class="date">Expected April 2019</emphasis>
+        </div>
+      </div>
+      <ul class="details">
+        <li>Bachelor of Science in computer science</li>
+        <li>Dean's List all semesters</li>
+        <li>Awards: Isaac Seder Scholarship for academic achievement</li>
+        <li>
+          Related Coursework: Software Engineering, Software Quality Assurance
+        </li>
+      </ul>
+    </div>
+    <h3>EXPERIENCE</h3>
+    <div class="section">
+      <div class="section-header">
+        <div class="section-block">
+          <strong>University of Pittsburgh Medical Center Enterprises</strong>
+          <emphasis>Associate Software Engineer</emphasis>
+        </div>
+        <div class="section-block right-align">
+          <strong>Pittsburgh, PA</strong>
+          <emphasis class="date">May 2018 - Present</emphasis>
+        </div>
+      </div>
+      <ul class="details">
+        <li>Led a small team practicing the Agile/Scrum framework.</li>
+        <li>
+          Optimized an existing system utilizing Ruby on Rails to efficiently
+          generate data quality reports for 150+ million documents.
+        </li>
+        <li>
+          Reduced a $1000, week-long process to dynamic, cost-effective system.
+        </li>
+        <li>
+          Expanded REST API to provide administration features to web
+          application.
+        </li>
+        <li>
+          Wrote automated unit and end-to-end tests using Cucumber in
+          collaboration with QA team to ensure all code was stable and ready for
+          production.
+        </li>
+      </ul>
+      <div class="section-header">
+        <div class="section-block">
+          <strong>The University of Pittsburgh</strong>
+          <emphasis>Computer Science Undergraduate Teaching Assistant</emphasis>
+        </div>
+        <div class="section-block right-align">
+          <strong>Pittsburgh, PA</strong>
+          <emphasis class="date">August 2017 - April 2018</emphasis>
+        </div>
+      </div>
+      <ul class="details">
+        <li>Led weekly recitations for introductory Python course.</li>
+        <li>
+          Communicated fundamental coding concepts to those with no background.
+        </li>
+        <li>
+          Provided tutoring for all core computer science courses.
+        </li>
+      </ul>
+      <div class="section-header">
+        <div class="section-block">
+          <strong>University of Pittsburgh Computer Science Club</strong>
+          <emphasis> Open Data Project Front-end Developer</emphasis>
+        </div>
+        <div class="section-block right-align">
+          <strong>Pittsburgh, PA</strong>
+          <emphasis class="date">Spring 2017</emphasis>
+        </div>
+      </div>
+      <ul class="details">
+        <li>
+          Collaborated with other members to build an open source, user
+          interface for an online map displaying events around campus.
+        </li>
+        <li>
+          Leveraged open databases utilizing asynchronous JavaScript code.
+        </li>
+      </ul>
+    </div>
+    <h3>TECHNICAL SKILLS</h3>
+    <div class="section">
+      <strong>Programming Languages:</strong> C, Python, SQL, Java, Ruby, JavaScript,
+      HTML, CSS
+      <br />
+      <strong>Technologies:</strong> Git, My/PostreSQL, Ruby on Rails, Node.js, AWS, Linux
+    </div>
+  </div>
+</div>
