--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 ---
 layout: default
 ---
+
 <div id="paper-container">
   <div id="paper">
     <div id="paper-header">
-      <h1 id="name">Colton Blake</h1>
+      <h1>Colton Blake</h1>
       <div id="contact-info">
-        <span>cltnblk-at-gmail-dot-com</span>
+        <em>cltnblk-at-gmail-dot-com</em>
         |
-        <span>
+        <em>
           <a href="https://github.com/coltonb">github.com/coltonb</a>
-        </span>
+        </em>
       </div>
     </div>
     <hr />
@@ -19,11 +20,11 @@ layout: default
       <div class="section-header">
         <div class="section-block">
           <strong>The University of Pittsburgh</strong>
-          <emphasis><strong>GPA: 3.96 / 4.00</strong></emphasis>
+          <em><strong>GPA: 3.96 / 4.00</strong></em>
         </div>
         <div class="section-block right-align">
           <strong>Pittsburgh, PA</strong>
-          <emphasis class="date">Expected April 2019</emphasis>
+          <em class="date">Expected April 2019</em>
         </div>
       </div>
       <ul class="details">
@@ -40,11 +41,11 @@ layout: default
       <div class="section-header">
         <div class="section-block">
           <strong>University of Pittsburgh Medical Center Enterprises</strong>
-          <emphasis>Associate Software Engineer</emphasis>
+          <em>Associate Software Engineer</em>
         </div>
         <div class="section-block right-align">
           <strong>Pittsburgh, PA</strong>
-          <emphasis class="date">May 2018 - Present</emphasis>
+          <em class="date">May 2018 - Present</em>
         </div>
       </div>
       <ul class="details">
@@ -69,11 +70,11 @@ layout: default
       <div class="section-header">
         <div class="section-block">
           <strong>The University of Pittsburgh</strong>
-          <emphasis>Computer Science Undergraduate Teaching Assistant</emphasis>
+          <em>Computer Science Undergraduate Teaching Assistant</em>
         </div>
         <div class="section-block right-align">
           <strong>Pittsburgh, PA</strong>
-          <emphasis class="date">August 2017 - April 2018</emphasis>
+          <em class="date">August 2017 - April 2018</em>
         </div>
       </div>
       <ul class="details">
@@ -88,11 +89,11 @@ layout: default
       <div class="section-header">
         <div class="section-block">
           <strong>University of Pittsburgh Computer Science Club</strong>
-          <emphasis> Open Data Project Front-end Developer</emphasis>
+          <em> Open Data Project Front-end Developer</em>
         </div>
         <div class="section-block right-align">
           <strong>Pittsburgh, PA</strong>
-          <emphasis class="date">Spring 2017</emphasis>
+          <em class="date">Spring 2017</em>
         </div>
       </div>
       <ul class="details">
@@ -107,10 +108,11 @@ layout: default
     </div>
     <h3>TECHNICAL SKILLS</h3>
     <div class="section">
-      <strong>Programming Languages:</strong> C, Python, SQL, Java, Ruby, JavaScript,
-      HTML, CSS
+      <strong>Programming Languages:</strong> C, Python, SQL, Java, Ruby,
+      JavaScript, HTML, CSS
       <br />
-      <strong>Technologies:</strong> Git, My/PostreSQL, Ruby on Rails, Node.js, AWS, Linux
+      <strong>Technologies:</strong> Git, My/PostreSQL, Ruby on Rails, Node.js,
+      AWS, Linux
     </div>
   </div>
 </div>
