--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: default
     <div id="paper-header">
       <h1>Colton Blake</h1>
       <div id="contact-info">
-        <em>cltnblk-at-gmail-dot-com</em>
-        |
+        <em>Pittsburgh, PA</em> |
+        <em>cltnblk-at-gmail-dot-com</em> |
         <em>
           <a href="https://github.com/coltonb">github.com/coltonb</a>
         </em>
