Fixed mobile rendering on non-resume pages

--- a/index.html
+++ b/index.html
@@ -2,108 +2,111 @@
 layout: default
 ---
 
-<h1>Colton Blake</h1>
-<div id="contact-info">
-  <em>Pittsburgh, PA</em> | <em>cltnblk-at-gmail-dot-com</em> |
-  <em>
-    <a href="https://github.com/coltonb">github.com/coltonb</a>
-  </em>
-</div>
-<hr />
-<h3>EDUCATION</h3>
-<div class="section">
-  <div class="section-header">
-    <div class="section-block">
-      <strong>The University of Pittsburgh</strong>
-      <em><strong>GPA: 3.96 / 4.00</strong></em>
-    </div>
-    <div class="section-block right-align">
-      <strong>Pittsburgh, PA</strong>
-      <em class="date">Expected April 2019</em>
-    </div>
+<div id="resume">
+  <h1>Colton Blake</h1>
+  <div id="contact-info">
+    <em>Pittsburgh, PA</em> | <em>cltnblk-at-gmail-dot-com</em> |
+    <em>
+      <a href="https://github.com/coltonb">github.com/coltonb</a>
+    </em>
   </div>
-  <ul class="details">
-    <li>Bachelor of Science in computer science</li>
-    <li>Dean's List all semesters</li>
-    <li>Awards: Isaac Seder Scholarship for academic achievement</li>
-    <li>
-      Related Coursework: Software Engineering, Software Quality Assurance
-    </li>
-  </ul>
-</div>
-<h3>EXPERIENCE</h3>
-<div class="section">
-  <div class="section-header">
-    <div class="section-block">
-      <strong>University of Pittsburgh Medical Center Enterprises</strong>
-      <em>Associate Software Engineer</em>
+  <hr />
+  <h3>EDUCATION</h3>
+  <div class="section">
+    <div class="section-header">
+      <div class="section-block">
+        <strong>The University of Pittsburgh</strong>
+        <em><strong>GPA: 3.96 / 4.00</strong></em>
+      </div>
+      <div class="section-block right-align">
+        <strong>Pittsburgh, PA</strong>
+        <em class="date">Expected April 2019</em>
+      </div>
     </div>
-    <div class="section-block right-align">
-      <strong>Pittsburgh, PA</strong>
-      <em class="date">May 2018 - Present</em>
-    </div>
+    <ul class="details">
+      <li>Bachelor of Science in computer science</li>
+      <li>Dean's List all semesters</li>
+      <li>Awards: Isaac Seder Scholarship for academic achievement</li>
+      <li>
+        Related Coursework: Software Engineering, Software Quality Assurance
+      </li>
+    </ul>
   </div>
-  <ul class="details">
-    <li>Led a small team practicing the Agile/Scrum framework.</li>
-    <li>
-      Optimized an existing system utilizing Ruby on Rails to efficiently
-      generate data quality reports for 150+ million documents.
-    </li>
-    <li>
-      Reduced a $1000, week-long process to dynamic, cost-effective system.
-    </li>
-    <li>
-      Expanded REST API to provide administration features to web application.
-    </li>
-    <li>
-      Wrote automated unit and end-to-end tests using Cucumber in collaboration
-      with QA team to ensure all code was stable and ready for production.
-    </li>
-  </ul>
-  <div class="section-header">
-    <div class="section-block">
-      <strong>The University of Pittsburgh</strong>
-      <em>Computer Science Undergraduate Teaching Assistant</em>
+  <h3>EXPERIENCE</h3>
+  <div class="section">
+    <div class="section-header">
+      <div class="section-block">
+        <strong>University of Pittsburgh Medical Center Enterprises</strong>
+        <em>Associate Software Engineer</em>
+      </div>
+      <div class="section-block right-align">
+        <strong>Pittsburgh, PA</strong>
+        <em class="date">May 2018 - Present</em>
+      </div>
     </div>
-    <div class="section-block right-align">
-      <strong>Pittsburgh, PA</strong>
-      <em class="date">August 2017 - April 2018</em>
+    <ul class="details">
+      <li>Led a small team practicing the Agile/Scrum framework.</li>
+      <li>
+        Optimized an existing system utilizing Ruby on Rails to efficiently
+        generate data quality reports for 150+ million documents.
+      </li>
+      <li>
+        Reduced a $1000, week-long process to dynamic, cost-effective system.
+      </li>
+      <li>
+        Expanded REST API to provide administration features to web application.
+      </li>
+      <li>
+        Wrote automated unit and end-to-end tests using Cucumber in
+        collaboration with QA team to ensure all code was stable and ready for
+        production.
+      </li>
+    </ul>
+    <div class="section-header">
+      <div class="section-block">
+        <strong>The University of Pittsburgh</strong>
+        <em>Computer Science Undergraduate Teaching Assistant</em>
+      </div>
+      <div class="section-block right-align">
+        <strong>Pittsburgh, PA</strong>
+        <em class="date">August 2017 - April 2018</em>
+      </div>
     </div>
+    <ul class="details">
+      <li>Led weekly recitations for introductory Python course.</li>
+      <li>
+        Communicated fundamental coding concepts to those with no background.
+      </li>
+      <li>
+        Provided tutoring for all core computer science courses.
+      </li>
+    </ul>
+    <div class="section-header">
+      <div class="section-block">
+        <strong>University of Pittsburgh Computer Science Club</strong>
+        <em> Open Data Project Front-end Developer</em>
+      </div>
+      <div class="section-block right-align">
+        <strong>Pittsburgh, PA</strong>
+        <em class="date">Spring 2017</em>
+      </div>
+    </div>
+    <ul class="details">
+      <li>
+        Collaborated with other members to build an open source, user interface
+        for an online map displaying events around campus.
+      </li>
+      <li>
+        Leveraged open databases utilizing asynchronous JavaScript code.
+      </li>
+    </ul>
   </div>
-  <ul class="details">
-    <li>Led weekly recitations for introductory Python course.</li>
-    <li>
-      Communicated fundamental coding concepts to those with no background.
-    </li>
-    <li>
-      Provided tutoring for all core computer science courses.
-    </li>
-  </ul>
-  <div class="section-header">
-    <div class="section-block">
-      <strong>University of Pittsburgh Computer Science Club</strong>
-      <em> Open Data Project Front-end Developer</em>
-    </div>
-    <div class="section-block right-align">
-      <strong>Pittsburgh, PA</strong>
-      <em class="date">Spring 2017</em>
-    </div>
+  <h3>TECHNICAL SKILLS</h3>
+  <div class="section">
+    <strong>Programming Languages:</strong> C, Python, SQL, Java, Ruby,
+    JavaScript, HTML, CSS
+    <br />
+    <strong>Technologies:</strong> Git, My/PostreSQL, Ruby on Rails, Node.js,
+    AWS, Linux
   </div>
-  <ul class="details">
-    <li>
-      Collaborated with other members to build an open source, user interface
-      for an online map displaying events around campus.
-    </li>
-    <li>
-      Leveraged open databases utilizing asynchronous JavaScript code.
-    </li>
-  </ul>
-</div>
-<h3>TECHNICAL SKILLS</h3>
-<div class="section">
-  <strong>Programming Languages:</strong> C, Python, SQL, Java, Ruby,
-  JavaScript, HTML, CSS
-  <br />
-  <strong>Technologies:</strong> Git, My/PostreSQL, Ruby on Rails, Node.js, AWS,
-  Linux
 </div>
