--- a/index.html
+++ b/index.html
@@ -11,50 +11,61 @@ layout: default
     </em>
   </div>
   <hr />
-  <h3>EDUCATION</h3>
-  <div class="section">
-    <div class="section-header">
-      <div class="section-block">
-        <strong>The University of Pittsburgh</strong>
-        <em><strong>GPA: 3.96 / 4.00</strong></em>
-      </div>
-      <div class="section-block right-align">
-        <strong>Pittsburgh, PA</strong>
-        <em class="date">Expected April 2019</em>
-      </div>
-    </div>
-    <ul class="details">
-      <li>Bachelor of Science in computer science</li>
-      <li>Dean's List all semesters</li>
-      <li>Awards: Isaac Seder Scholarship for academic achievement</li>
-      <li>
-        Related Coursework: Software Engineering, Software Quality Assurance
-      </li>
-    </ul>
-  </div>
   <h3>EXPERIENCE</h3>
   <div class="section">
     <div class="section-header">
       <div class="section-block">
-        <strong>University of Pittsburgh Medical Center Enterprises</strong>
-        <em>Associate Software Engineer</em>
+        <strong>Software Engineer</strong>
+        <em>University of Pittsburgh Medical Center Enterprises</em>
       </div>
       <div class="section-block right-align">
         <strong>Pittsburgh, PA</strong>
-        <em class="date">May 2018 - Present</em>
+        <em class="date">May 2019 - Present</em>
       </div>
     </div>
     <ul class="details">
-      <li>Led a small team practicing the Agile/Scrum framework.</li>
+      <li>
+        Designed, implemented, and unit tested new endpoints for Ruby on Rails
+        REST API.
+      </li>
+      <li>
+        Mentored a team of three software engineer interns, enabling them to
+        make valuable contributions to the product.
+      </li>
+      <li>
+        Created and performed migration procedure from self-managed Kubernetes
+        cluster to AWS EKS.
+      </li>
+      <li>
+        Implemented automated continuous deployment system for a production
+        application.
+      </li>
+      <li>
+        Investigated and solved complex big data problems with MySQL.
+      </li>
+    </ul>
+    <div class="section-header">
+      <div class="section-block">
+        <strong>Software Engineer Intern</strong>
+        <em>University of Pittsburgh Medical Center Enterprises</em>
+      </div>
+      <div class="section-block right-align">
+        <strong>Pittsburgh, PA</strong>
+        <em class="date">May 2018 - May 2019</em>
+      </div>
+    </div>
+    <ul class="details">
+      <li>Led a small team of interns practicing the Agile/Scrum framework.</li>
       <li>
         Optimized an existing system utilizing Ruby on Rails to efficiently
         generate data quality reports for 150+ million documents.
       </li>
       <li>
-        Reduced a $1000, week-long process to dynamic, cost-effective system.
+        Reduced a $1000, week-long process to a dynamic, cost-effective system.
       </li>
       <li>
-        Expanded REST API to provide administration features to web application.
+        Expanded Rails REST API to provide administration features to web
+        application.
       </li>
       <li>
         Wrote automated unit and end-to-end tests using Cucumber in
@@ -64,8 +75,8 @@ layout: default
     </ul>
     <div class="section-header">
       <div class="section-block">
-        <strong>The University of Pittsburgh</strong>
-        <em>Computer Science Undergraduate Teaching Assistant</em>
+        <strong>Undergraduate Teaching Assistant</strong>
+        <em>The University of Pittsburgh</em>
       </div>
       <div class="section-block right-align">
         <strong>Pittsburgh, PA</strong>
@@ -81,10 +92,10 @@ layout: default
         Provided tutoring for all core computer science courses.
       </li>
     </ul>
-    <div class="section-header">
+    <!-- <div class="section-header">
       <div class="section-block">
-        <strong>University of Pittsburgh Computer Science Club</strong>
-        <em> Open Data Project Front-end Developer</em>
+        <strong>Open Data Project Front-end Developer</strong>
+        <em>University of Pittsburgh Computer Science Club</em>
       </div>
       <div class="section-block right-align">
         <strong>Pittsburgh, PA</strong>
@@ -99,14 +110,35 @@ layout: default
       <li>
         Leveraged open databases utilizing asynchronous JavaScript code.
       </li>
+    </ul> -->
+  </div>
+  <h3>EDUCATION</h3>
+  <div class="section">
+    <div class="section-header">
+      <div class="section-block">
+        <strong>The University of Pittsburgh</strong>
+        <em><strong>GPA: 3.96 / 4.00</strong></em>
+      </div>
+      <div class="section-block right-align">
+        <strong>Pittsburgh, PA</strong>
+        <em class="date">April 2019</em>
+      </div>
+    </div>
+    <ul class="details">
+      <li>Bachelor of Science in computer science</li>
+      <li>Dean's List all semesters</li>
+      <li>Awards: Isaac Seder Scholarship for academic achievement</li>
+      <li>
+        Related Coursework: Software Engineering, Software Quality Assurance
+      </li>
     </ul>
   </div>
   <h3>TECHNICAL SKILLS</h3>
   <div class="section">
-    <strong>Programming Languages:</strong> C, Python, SQL, Java, Ruby,
-    JavaScript, HTML, CSS
+    <strong>Programming Languages:</strong> Ruby, JavaScript, SQL, Python, Java,
+    HTML, CSS
     <br />
-    <strong>Technologies:</strong> Git, My/PostreSQL, Ruby on Rails, Node.js,
-    AWS, Linux
+    <strong>Technologies:</strong> AWS, Docker, Kubernetes, MySQL, Git, Ruby on
+    Rails, Node.js, Linux
   </div>
 </div>
