--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ layout: default
         cluster to AWS EKS.
       </li>
       <li>
-        Implemented automated continuous deployment system for a production
-        application.
+        Implemented continuous deployment system for a production environment.
       </li>
       <li>
         Investigated and solved complex big data problems with MySQL.
@@ -57,8 +56,8 @@ layout: default
     <ul class="details">
       <li>Led a small team of interns practicing the Agile/Scrum framework.</li>
       <li>
-        Optimized an existing system utilizing Ruby on Rails to efficiently
-        generate data quality reports for 150+ million documents.
+        Optimized data quality report system to generate reports for 150+
+        million documents.
       </li>
       <li>
         Reduced a $1000, week-long process to a dynamic, cost-effective system.
@@ -69,8 +68,7 @@ layout: default
       </li>
       <li>
         Wrote automated unit and end-to-end tests using Cucumber in
-        collaboration with QA team to ensure all code was stable and ready for
-        production.
+        collaboration with QA team.
       </li>
     </ul>
     <div class="section-header">
