update education again

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ layout: default
     </div>
     <ul class="details">
       <li>Bachelor of Science in computer science</li>
-      <li>Awards: Isaac Seder Scholarship for academic achievement</li>
+      <li>Honors: Dean's List, <i>summa cum laude</i>
     </ul>
   </div>
   <h3>TECHNICAL SKILLS</h3>
