--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <h1>Colton Blake</h1>
-      <h2 style="margin-bottom: 0.5em">Senior Software Engineer</h2>
+      <h2 style="margin-bottom: 0.5em">Software Engineer</h2>
 
       <div class="setting">
         <span><i class="material-icons">location_on</i>Philadelphia, PA</span>
@@ -39,7 +39,7 @@
           <header>
             <div class="row">
               <div>
-                <h2>Lead Software Engineer</h2>
+                <h2>Staff Software Engineer</h2>
                 <h3>Arcadia Solutions, LLC</h3>
               </div>
               <div class="setting">
